{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 178,
  "lineage": "25460c04-2d47-3b6a-8558-ede1fa54286b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022f8cc826530b0a7",
            "arn": "arn:aws:ec2:us-east-1:567877624442:elastic-ip/eipalloc-022f8cc826530b0a7",
            "association_id": "eipassoc-0e64550a6ca74f60d",
            "domain": "vpc",
            "id": "eipalloc-022f8cc826530b0a7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ed3ccb17b90dc3f4",
            "private_dns": "ip-10-0-1-105.ec2.internal",
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-34-233-36-7.compute-1.amazonaws.com",
            "public_ip": "34.233.36.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "codai-nat-eip-1-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-nat-eip-1-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0092f3b78cca0581b",
            "arn": "arn:aws:ec2:us-east-1:567877624442:elastic-ip/eipalloc-0092f3b78cca0581b",
            "association_id": "eipassoc-0c6be294b5daa4d86",
            "domain": "vpc",
            "id": "eipalloc-0092f3b78cca0581b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc0b26aa5bcb0b6a",
            "private_dns": "ip-10-0-2-150.ec2.internal",
            "private_ip": "10.0.2.150",
            "public_dns": "ec2-34-196-191-54.compute-1.amazonaws.com",
            "public_ip": "34.196.191.54",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "codai-nat-eip-2-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-nat-eip-2-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:internet-gateway/igw-05b0041e6fe0594b1",
            "id": "igw-05b0041e6fe0594b1",
            "owner_id": "567877624442",
            "tags": {
              "Name": "codai-igw-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-igw-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15",
            "arn_suffix": "app/codai-alb-prod/7419caa8a4fd9d15",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "codai-alb-prod-348122537.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "codai-alb-prod",
            "preserve_host_header": false,
            "security_groups": [
              "sg-038b3e54f8613d3d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0d5776725417e7fd4"
              },
              {
                "subnet_id": "subnet-0e813c7913c6b3538"
              }
            ],
            "subnets": [
              "subnet-0d5776725417e7fd4",
              "subnet-0e813c7913c6b3538"
            ],
            "tags": {
              "Name": "codai-alb-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-alb-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "vpc_id": "vpc-0dd52df6b616dd80c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/8446edff397f6d8b",
            "certificate_arn": "arn:aws:acm:us-east-1:567877624442:certificate/636a3f22-9f1f-444b-b603-03078898093b",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "CODAI Gateway - Service Discovery Required",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/8446edff397f6d8b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "tags": {
              "Name": "codai-alb-listener-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-alb-listener-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.codai_cert",
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "cbd_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-cbd-tg-prod/75b504da3e02eab3",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/67059286e492c9dd",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/cbd/*",
                      "/data/*",
                      "/database/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/67059286e492c9dd",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50",
            "priority": 300,
            "tags": {
              "Name": "codai-cbd-rule-prod",
              "Service": "cbd-database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-cbd-rule-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "cbd-database"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.cbd_database",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-gw-tg-prod/270d000a81b7421c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/2cdf09ea05ba47ff",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/gateway/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/2cdf09ea05ba47ff",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50",
            "priority": 100,
            "tags": {
              "Name": "codai-gateway-rule-prod",
              "Service": "gateway"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-gateway-rule-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "gateway"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.gateway",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "memorai_mcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-mem-tg-prod/8535dca3071a09d1",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/b9169e556621e188",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/mcp/*",
                      "/memorai/*",
                      "/memory/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/b9169e556621e188",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50",
            "priority": 200,
            "tags": {
              "Name": "codai-memorai-rule-prod",
              "Service": "memorai-mcp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-memorai-rule-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "memorai-mcp"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.memorai_mcp",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "secure_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-secure-gateway-tg/73cfb3baa73ed72f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/8446edff397f6d8b/e8439003f293e2ff",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "gateway.codai.ro"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/8446edff397f6d8b/e8439003f293e2ff",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/8446edff397f6d8b",
            "priority": 100,
            "tags": {
              "Environment": "production",
              "Name": "codai-secure-gateway-rule",
              "Project": "codai"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-secure-gateway-rule",
              "Owner": "CODAI-Team",
              "Project": "codai"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.codai_cert",
            "aws_lb.main",
            "aws_lb_listener.main_https",
            "aws_lb_target_group.secure_gateway",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ssl_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-ssl-tg-prod/fc6e1f5e8a519933",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/14cc3debc2b352be",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/proxy/*",
                      "/ssl/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/14cc3debc2b352be",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50",
            "priority": 500,
            "tags": {
              "Name": "codai-ssl-rule-prod",
              "Service": "ssl-proxy"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-ssl-rule-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "ssl-proxy"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.ssl_proxy",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "websocket_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-ws-tg-prod/ebeb147ad4992dde",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/37307f050731868a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/socket/*",
                      "/websocket/*",
                      "/ws/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener-rule/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50/37307f050731868a",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:listener/app/codai-alb-prod/7419caa8a4fd9d15/15d09a960f3ece50",
            "priority": 400,
            "tags": {
              "Name": "codai-websocket-rule-prod",
              "Service": "websocket-service"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-websocket-rule-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "websocket-service"
            }
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.main",
            "aws_lb_target_group.websocket_service",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "cbd_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-cbd-tg-prod/75b504da3e02eab3",
            "arn_suffix": "targetgroup/codai-cbd-tg-prod/75b504da3e02eab3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-cbd-tg-prod/75b504da3e02eab3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "codai-cbd-tg-prod",
            "port": 4180,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "codai-cbd-tg-prod",
              "Service": "cbd-database"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-cbd-tg-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "cbd-database"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-gw-tg-prod/270d000a81b7421c",
            "arn_suffix": "targetgroup/codai-gw-tg-prod/270d000a81b7421c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-gw-tg-prod/270d000a81b7421c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "codai-gw-tg-prod",
            "port": 4003,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "codai-gw-tg-prod",
              "Service": "gateway"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-gw-tg-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "gateway"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "memorai_mcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-mem-tg-prod/8535dca3071a09d1",
            "arn_suffix": "targetgroup/codai-mem-tg-prod/8535dca3071a09d1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 45,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-mem-tg-prod/8535dca3071a09d1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "codai-mem-tg-prod",
            "port": 8002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "codai-mem-tg-prod",
              "Service": "memorai-mcp"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-mem-tg-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "memorai-mcp"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "secure_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-secure-gateway-tg/73cfb3baa73ed72f",
            "arn_suffix": "targetgroup/codai-secure-gateway-tg/73cfb3baa73ed72f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-secure-gateway-tg/73cfb3baa73ed72f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "codai-secure-gateway-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "codai-secure-gateway-tg",
              "Project": "codai"
            },
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "Terraform",
              "Name": "codai-secure-gateway-tg",
              "Owner": "CODAI-Team",
              "Project": "codai"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ssl_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-ssl-tg-prod/fc6e1f5e8a519933",
            "arn_suffix": "targetgroup/codai-ssl-tg-prod/fc6e1f5e8a519933",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/nginx-health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-ssl-tg-prod/fc6e1f5e8a519933",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "codai-ssl-tg-prod",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "codai-ssl-tg-prod",
              "Service": "ssl-proxy"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-ssl-tg-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "ssl-proxy"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "websocket_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-ws-tg-prod/ebeb147ad4992dde",
            "arn_suffix": "targetgroup/codai-ws-tg-prod/ebeb147ad4992dde",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:567877624442:targetgroup/codai-ws-tg-prod/ebeb147ad4992dde",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:567877624442:loadbalancer/app/codai-alb-prod/7419caa8a4fd9d15"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "codai-ws-tg-prod",
            "port": 4900,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "codai-ws-tg-prod",
              "Service": "websocket-service"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-ws-tg-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Service": "websocket-service"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-022f8cc826530b0a7",
            "association_id": "eipassoc-0e64550a6ca74f60d",
            "connectivity_type": "public",
            "id": "nat-0c9a76f839d227858",
            "network_interface_id": "eni-0ed3ccb17b90dc3f4",
            "private_ip": "10.0.1.105",
            "public_ip": "34.233.36.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d5776725417e7fd4",
            "tags": {
              "Name": "codai-nat-gateway-1-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-nat-gateway-1-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0092f3b78cca0581b",
            "association_id": "eipassoc-0c6be294b5daa4d86",
            "connectivity_type": "public",
            "id": "nat-00aa0906244d646ed",
            "network_interface_id": "eni-0bc0b26aa5bcb0b6a",
            "private_ip": "10.0.2.150",
            "public_ip": "34.196.191.54",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e813c7913c6b3538",
            "tags": {
              "Name": "codai-nat-gateway-2-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-nat-gateway-2-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:route-table/rtb-0c315e58dc9d5ede5",
            "id": "rtb-0c315e58dc9d5ede5",
            "owner_id": "567877624442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c9a76f839d227858",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "codai-private-rt-1-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-private-rt-1-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:route-table/rtb-0b8e6d050cf69f676",
            "id": "rtb-0b8e6d050cf69f676",
            "owner_id": "567877624442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00aa0906244d646ed",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "codai-private-rt-2-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-private-rt-2-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:route-table/rtb-047389425d8b6348a",
            "id": "rtb-047389425d8b6348a",
            "owner_id": "567877624442",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b0041e6fe0594b1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "codai-public-rt-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-public-rt-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dc1d1cfbb313945",
            "route_table_id": "rtb-0c315e58dc9d5ede5",
            "subnet_id": "subnet-07b410268572ecd03"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001ebc66b2fe5da18",
            "route_table_id": "rtb-0b8e6d050cf69f676",
            "subnet_id": "subnet-069da263a1ba8588d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e7a460d7b8be759",
            "route_table_id": "rtb-047389425d8b6348a",
            "subnet_id": "subnet-0d5776725417e7fd4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4cd67dae132f576",
            "route_table_id": "rtb-047389425d8b6348a",
            "subnet_id": "subnet-0e813c7913c6b3538"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:security-group/sg-038b3e54f8613d3d5",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038b3e54f8613d3d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "codai-alb-sg-prod",
            "name_prefix": "",
            "owner_id": "567877624442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codai-alb-sg-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-alb-sg-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:security-group/sg-0fa252510c25faae1",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa252510c25faae1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-038b3e54f8613d3d5"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "codai-ecs-tasks-sg-prod",
            "name_prefix": "",
            "owner_id": "567877624442",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "codai-ecs-tasks-sg-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-ecs-tasks-sg-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:subnet/subnet-07b410268572ecd03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b410268572ecd03",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "567877624442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codai-private-subnet-1-prod",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-private-subnet-1-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Type": "Private"
            },
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:subnet/subnet-069da263a1ba8588d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069da263a1ba8588d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "567877624442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codai-private-subnet-2-prod",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-private-subnet-2-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Type": "Private"
            },
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:subnet/subnet-0d5776725417e7fd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5776725417e7fd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "567877624442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codai-public-subnet-1-prod",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-public-subnet-1-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Type": "Public"
            },
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:subnet/subnet-0e813c7913c6b3538",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e813c7913c6b3538",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "567877624442",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "codai-public-subnet-2-prod",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-public-subnet-2-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI",
              "Type": "Public"
            },
            "vpc_id": "vpc-0dd52df6b616dd80c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:567877624442:vpc/vpc-0dd52df6b616dd80c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a72f20ff2762c928",
            "default_route_table_id": "rtb-0b11c91d9057ae7c8",
            "default_security_group_id": "sg-0e149b33a548101f2",
            "dhcp_options_id": "dopt-0c50dcf71e7e7abdb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd52df6b616dd80c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b11c91d9057ae7c8",
            "owner_id": "567877624442",
            "tags": {
              "Name": "codai-vpc-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "codai-vpc-prod",
              "Owner": "CODAI-Team",
              "Project": "CODAI"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}